// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing CLI behavior default config : fixture : defaultConfig should not show the linting errors  (no htmllinter.config.js present)  : no-error: default config no error 1`] = `
"[HTMLLINTER] : Checking ./packages/htmllinter/src/__tests__/fixtures/defaultConfig/noErr.html 


[HTMLLINTER] : 0 errors found for file ./packages/htmllinter/src/__tests__/fixtures/defaultConfig/noErr.html

 Output for filename : ./packages/htmllinter/src/__tests__/fixtures/defaultConfig/noErr.html 

[90m┌─────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Message [39m[90m│[39m[31m Rule Name [39m[90m│[39m
[90m└─────────[39m[90m┴───────────┘[39m"
`;

exports[`Testing CLI behavior default config : fixture : defaultConfig should show the linting errors  (no htmllinter.config.js present) : default config 1`] = `
"[HTMLLINTER] : Checking ./packages/htmllinter/src/__tests__/fixtures/defaultConfig/input.html 

 Output for filename : ./packages/htmllinter/src/__tests__/fixtures/defaultConfig/input.html 

[90m┌──────────────────────────────────────────[39m[90m┬─────────────────┐[39m
[90m│[39m[31m Message                                  [39m[90m│[39m[31m Rule Name       [39m[90m│[39m
[90m├──────────────────────────────────────────[39m[90m┼─────────────────┤[39m
[90m│[39m the tag < h3 > has no content.           [90m│[39m no-empty-tag    [90m│[39m
[90m├──────────────────────────────────────────[39m[90m┼─────────────────┤[39m
[90m│[39m [HTMLINTER] duplicate ids asd adsasd @ a [90m│[39m no-duplicate-id [90m│[39m
[90m└──────────────────────────────────────────[39m[90m┴─────────────────┘[39m"
`;

exports[`Testing CLI behavior extend config : fixture : extendConfig should not show the linting errors  ( htmllinter.config.js present) as non-Error files : extend config 1`] = `
"[HTMLLINTER] : Checking ./packages/htmllinter/src/__tests__/fixtures/extendConfig/noError.html 


[HTMLLINTER] : 0 errors found for file ./packages/htmllinter/src/__tests__/fixtures/extendConfig/noError.html

 Output for filename : ./packages/htmllinter/src/__tests__/fixtures/extendConfig/noError.html 

[90m┌─────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Message [39m[90m│[39m[31m Rule Name [39m[90m│[39m
[90m└─────────[39m[90m┴───────────┘[39m"
`;

exports[`Testing CLI behavior extend config : fixture : extendConfig should show the linting errors  ( htmllinter.config.js present) : extend config 1`] = `
"[HTMLLINTER] : Checking ./packages/htmllinter/src/__tests__/fixtures/extendConfig/input.html 

 Output for filename : ./packages/htmllinter/src/__tests__/fixtures/extendConfig/input.html 

[90m┌───────────────────────────────────────────────────────────────────────────────────────────────────────[39m[90m┬──────────────────────────────┐[39m
[90m│[39m[31m Message                                                                                               [39m[90m│[39m[31m Rule Name                    [39m[90m│[39m
[90m├───────────────────────────────────────────────────────────────────────────────────────────────────────[39m[90m┼──────────────────────────────┤[39m
[90m│[39m the tag < p > has no content.                                                                         [90m│[39m no-empty-tag                 [90m│[39m
[90m├───────────────────────────────────────────────────────────────────────────────────────────────────────[39m[90m┼──────────────────────────────┤[39m
[90m│[39m the tag < h3 > has no content.                                                                        [90m│[39m no-empty-tag                 [90m│[39m
[90m├───────────────────────────────────────────────────────────────────────────────────────────────────────[39m[90m┼──────────────────────────────┤[39m
[90m│[39m [HTMLINTER] duplicate ids asd adsasd @ a                                                              [90m│[39m no-duplicate-id              [90m│[39m
[90m├───────────────────────────────────────────────────────────────────────────────────────────────────────[39m[90m┼──────────────────────────────┤[39m
[90m│[39m the attribute \\"enable\\" seems to be boolean with value \\"true\\",please conside using \\"<p enable>...</p>\\" [90m│[39m no-bool-true-explicit-define [90m│[39m
[90m│[39m                                                                                                       [90m│[39m                              [90m│[39m
[90m└───────────────────────────────────────────────────────────────────────────────────────────────────────[39m[90m┴──────────────────────────────┘[39m"
`;

exports[`Testing CLI behavior extend config with rule off : fixture : extendConfigRuleOff should not show the linting errors  ( htmllinter.config.js present) as non-Error files : extend config rule off 1`] = `
"[HTMLLINTER] : Checking ./packages/htmllinter/src/__tests__/fixtures/extendConfigRuleOff/noError.html 


[HTMLLINTER] : 0 errors found for file ./packages/htmllinter/src/__tests__/fixtures/extendConfigRuleOff/noError.html

 Output for filename : ./packages/htmllinter/src/__tests__/fixtures/extendConfigRuleOff/noError.html 

[90m┌─────────[39m[90m┬───────────┐[39m
[90m│[39m[31m Message [39m[90m│[39m[31m Rule Name [39m[90m│[39m
[90m└─────────[39m[90m┴───────────┘[39m"
`;

exports[`Testing CLI behavior extend config with rule off : fixture : extendConfigRuleOff should show the linting errors  ( htmllinter.config.js present) : extend config rule off 1`] = `
"[HTMLLINTER] : Checking ./packages/htmllinter/src/__tests__/fixtures/extendConfigRuleOff/input.html 

 Output for filename : ./packages/htmllinter/src/__tests__/fixtures/extendConfigRuleOff/input.html 

[90m┌──────────────────────────────────────────[39m[90m┬─────────────────┐[39m
[90m│[39m[31m Message                                  [39m[90m│[39m[31m Rule Name       [39m[90m│[39m
[90m├──────────────────────────────────────────[39m[90m┼─────────────────┤[39m
[90m│[39m [HTMLINTER] duplicate ids asd adsasd @ a [90m│[39m no-duplicate-id [90m│[39m
[90m└──────────────────────────────────────────[39m[90m┴─────────────────┘[39m"
`;

exports[`Testing CLI behavior input pattern should show help when no arg is passed with proper err message: help 1`] = `
"
Usage :

$ htmllinter <input> [-c|--config]

input           - it is the input(html) file name, it accepts glob pattern.
                example :
                  - \\"input.html\\"
                  - \\"input\\"
                  - \\"/*.html\\"
                  - \\".\\"

Options
  -c, --config    - path to htmllinter.config.js.
                    default is \\".\\"
                    example :
                    - '.'
                    - './dir/'

Example

    $ htmllinter input.html
    $ htmllinter input -c ../
    $ htmllinter **/*"
`;

exports[`Testing CLI behavior input pattern should show help when when non-existing input is passed with proper err message: help 1`] = `
"
Usage :

$ htmllinter <input> [-c|--config]

input           - it is the input(html) file name, it accepts glob pattern.
                example :
                  - \\"input.html\\"
                  - \\"input\\"
                  - \\"/*.html\\"
                  - \\".\\"

Options
  -c, --config    - path to htmllinter.config.js.
                    default is \\".\\"
                    example :
                    - '.'
                    - './dir/'

Example

    $ htmllinter input.html
    $ htmllinter input -c ../
    $ htmllinter **/*"
`;
